kubernetes-flux/hci-mini/storage-system/local-path-provisioner/app/ciliumnetworkpolicy.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: local-path-provisioner
  namespace: storage-system
spec:
  endpointSelector:
    matchLabels:
      app: local-path-provisioner
  ingress:
    - {}
  egress:
    - toEntities:
        - kube-apiserver
